# repo

./: .gitignore  README.rst  pyproject.toml  repo  setup.py  wrapper.py
debian/: control  copyright  repo.docs  rules  turnkey-repo.links
docs/: RelNotes-1.0.txt
pylib/: cmd_index.py  cmd_release.py  repo.py
repo_lib/: __init__.py  client.py  download.py  gpg.py
tests/: conftest.py  test_features.py  test_regression.py
