[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "repo"
version = "2.0"
authors = [{name = "TurnKey GNU/Linux", email = "jeremy@turnkeylinux.org"}]
license = {text = "GPLv3+"}
description = "TurnKey tools to index and create a Debian package repository"

[project.urls]
Homepage = "https://github.com/turnkeylinux/repo"

[tool.setuptools]
packages = ["repo_lib"]
script-files = ["repo"]
include-package-data = false
